--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Sociology, Rural'
 - !lcc 'HT'
+- GITenberg
 title: 'The Challenge of the Country: A Study of Country Life Opportunity'
 url: http://www.gutenberg.org/ebooks/32749
